--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# FRONTEND
+node_modules
+.next
