--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.3.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-easy-chart": "^0.1.13",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
