--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "isomorphic-unfetch": "^2.0.0",
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.3.4",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-easy-chart": "^0.1.13",
