first graph with error

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-assets-import-to-string": "^1.0.1",
+    "d3": "^3.5.17",
+    "d3-array": "^1.2.0",
+    "d3-scale": "^1.0.6",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-loader": "^1.9.0",
@@ -25,6 +28,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-easy-chart": "^0.1.13",
+    "react-faux-dom": "^4.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
