--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-click==6.7
-Flask==0.12.2
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-numpy==1.13.1
-pandas==0.20.3
-python-dateutil==2.6.1
-pytz==2017.2
-PyYAML==3.12
-six==1.10.0
-Werkzeug==0.12.2
+flask
+pandas
+requests
