--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "max-len": [1, 150],
         "indent": ["error", 4, { "SwitchCase": 1 }],
         "no-param-reassign": ["error", { "props": false }],
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "no-undef": "off",
     }
 }
